# Estructuras_Prueba

./: CMakeLists.txt  README.md  probar
Estructura/: continente.cpp  continente.h  jugador.cpp  jugador.h  tarjeta.cpp  tarjeta.h  territorio.cpp  territorio.h
Juego/: continentes_guardados.txt  main.cpp  partida_guardada.txt  tarjetas_globales_guardadas.txt  territorios_guardados.txt
